# rules-rego-wasm

./: .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  extensions.bzl  toolchain.bzl
.github/workflows/: ci.yaml
examples/: BUILD.bazel
examples/policy/: BUILD.bazel  check_outputs_test.sh  example.rego
examples/with-data/: BUILD.bazel  check_outputs_test.sh  example.rego
rego/: BUILD.bazel  defs.bzl  rego-to-wasm.sh
