load("@rules_rego_wasm//rego:defs.bzl", "rego_to_wasm")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

rego_to_wasm(
    name = "data_policy",
    srcs = [
        "data.json",
        "example.rego",
    ],
    entrypoint = "rego/allow",
)

# Expose outputs for testing
filegroup(
    name = "data_outputs",
    srcs = [
        "data.json",
        ":data_policy",
    ],
)

sh_test(
    name = "check_outputs_test",
    srcs = ["check_outputs_test.sh"],
    args = ["$(locations :data_outputs)"],
    data = [":data_outputs"],
)
